Issue #22241: Fix a compiler waring